# data-platform-agent

./: .env.example  .gitignore  README.md  app.py  app.yaml  app.yml  app_stdlib.py  pyproject.toml  requirements.txt
client/: openai_agent.py
scripts/: check-config.ps1  databricks-agent.ps1  set-secrets.ps1
src/genie_mcp/: __init__.py  agent_client.py  auth.py  config.py  databricks_genie.py  databricks_llm.py  dbsql_mcp_agent.py  dbsql_mcp_client.py  dbx_agent_client.py  direct_client.py  server.py  sql_guard.py  unified_agent.py
